# qa_guru_python_5_19_REST_API_2_hw

./: .gitignore  README.md  helper.py  pyproject.toml  test_reqres_2.py
schemas/: post_create_user.json  put_update_user.json
